; ModuleID = '/home/carl/AnghaBench/systemd/src/login/extr_logind-session-device.c_detect_device_type.c'
source_filename = "/home/carl/AnghaBench/systemd/src/login/extr_logind-session-device.c_detect_device_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEVICE_TYPE_UNKNOWN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"drm\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"card\00", align 1
@DEVICE_TYPE_DRM = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [6 x i8] c"input\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"event\00", align 1
@DEVICE_TYPE_EVDEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @detect_device_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detect_device_type(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32, i32* @DEVICE_TYPE_UNKNOWN, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @sd_device_get_sysname(i32* %8, i8** %4)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i64 @sd_device_get_subsystem(i32* %12, i8** %5)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %11, %1
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %2, align 4
  br label %42

17:                                               ; preds = %11
  %18 = load i8*, i8** %5, align 8
  %19 = call i64 @streq(i8* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %17
  %22 = load i8*, i8** %4, align 8
  %23 = call i64 @startswith(i8* %22, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i32, i32* @DEVICE_TYPE_DRM, align 4
  store i32 %26, i32* %6, align 4
  br label %27

27:                                               ; preds = %25, %21
  br label %40

28:                                               ; preds = %17
  %29 = load i8*, i8** %5, align 8
  %30 = call i64 @streq(i8* %29, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %39

32:                                               ; preds = %28
  %33 = load i8*, i8** %4, align 8
  %34 = call i64 @startswith(i8* %33, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %32
  %37 = load i32, i32* @DEVICE_TYPE_EVDEV, align 4
  store i32 %37, i32* %6, align 4
  br label %38

38:                                               ; preds = %36, %32
  br label %39

39:                                               ; preds = %38, %28
  br label %40

40:                                               ; preds = %39, %27
  %41 = load i32, i32* %6, align 4
  store i32 %41, i32* %2, align 4
  br label %42

42:                                               ; preds = %40, %15
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i64 @sd_device_get_sysname(i32*, i8**) #1

declare dso_local i64 @sd_device_get_subsystem(i32*, i8**) #1

declare dso_local i64 @streq(i8*, i8*) #1

declare dso_local i64 @startswith(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
